kubernetes/IngressController/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: httpd-deploy
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: NodePort
