kubernetes/IngressController/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-deploy
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: NodePort
