kubernetes/IngressController/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deploy-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "nginx.myservice.local"
      http:
        paths:
          - path : /
            pathType: Prefix
            backend:
             service:
               name: nginx-service
               port:
                 number: 80
    - host: "httpd.myservice.local"
      http:
        paths:
          - path : /
            pathType: Prefix
            backend:
              service:
                name: httpd-service
                port:
                  number: 80
