kubernetes/IngressController/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deploy-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path : /nginx
            pathType: Prefix
            backend:
             service:
               name: nginx-service
               port:
                 number: 80
          - path : /httpd
            pathType: Prefix
            backend:
              service:
                name: httpd-service
                port:
                  number: 80
